[package]
name = "rsyes"
version = "0.0.1"
authors = ["rytis"]
edition = "2018"
description = "YES implementation in Rust"
readme = "README.md"
repository = "https://github.com/rytis/rsyes"
license = "GNU General Public License v3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
